blockchain/webapi/chain-data.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chain-data-api
  namespace: token-api
  labels:
    app.kubernetes.io/name: chain-data-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0     #更新时候最大无效pod数量
      maxSurge: 1           #更新时候每次最多增加pod数量
  selector:
    matchLabels:
      app.kubernetes.io/name: chain-data-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chain-data-api
    spec:
      volumes:
      - name: config-volume
        secret:
          secretName: bc-data-secret
          items:
          - key: config_json
            path: sa_credentials.json
      - name: secrets
        secret:
          secretName: token-data-settings
      containers:
        - name: gcs-k8s-data
          image: gcr.io/rd-test-64435/chain_data_api:v23.11.6.2
          imagePullPolicy: Always
          volumeMounts:
          - name: config-volume
            mountPath: /etc/gcp
            readOnly: true
          - name: secrets
            mountPath: /app/appsettings.json
            subPath: appsettings.json
            readOnly: true
          args: ["ASPNETCORE_ENVIRONMENT=Kubernetes", "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=0"]
---
apiVersion: v1
kind: Service
metadata:
  name: chain-data-api-svc
  namespace: token-api
  labels:
    app.kubernetes.io/name: chain-data-api
spec:
  type: ClusterIP
  ports:
    - port: 10001
      targetPort: 10001
      protocol: TCP
  selector:
    app.kubernetes.io/name: chain-data-api
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: hpa-chain-data-api
#   namespace: token-api
# spec:
#   maxReplicas: 104
#   minReplicas: 1
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: chain-data-api
#   targetCPUUtilizationPercentage: 95
