blockchain/webapi/token-app-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-app-ui
  namespace: token-api
  labels:
    app.kubernetes.io/name: token-app-ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0     #更新时候最大无效pod数量
      maxSurge: 1           #更新时候每次最多增加pod数量
  selector:
    matchLabels:
      app.kubernetes.io/name: token-app-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: token-app-ui
    spec:
      volumes:
      - name: config-volume
        secret:
          secretName: bc-app-bucket-secret
          items:
          - key: config_json
            path: sa_credentials.json
      containers:
        - name: gcs-k8s-nginx
          image: gcr.io/rd-test-64435/sg_nginx:v22.2.24.1
          imagePullPolicy: Always
          volumeMounts:
          - name: config-volume
            mountPath: /etc/gcp
            readOnly: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          lifecycle:
            postStart:
              exec:
                command: ["sh", "-c", "gcsfuse -o allow_other --implicit-dirs token-app-ui /etc/nginx/conf.d && ln -s /etc/nginx/conf.d/ui /usr/share/nginx/ui && sleep 5 && nginx -s reload"]
            preStop:
              exec:
                command: ["sh", "-c", "fusermount -u /etc/nginx/conf.d"]
---
apiVersion: v1
kind: Service
metadata:
  name: token-ui-svc
  namespace: token-api
  labels:
    app.kubernetes.io/name: token-app-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: token-app-ui
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: hpa-token-app-ui
#   namespace: token-api
# spec:
#   maxReplicas: 10
#   minReplicas: 1
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: token-app-ui
#   targetCPUUtilizationPercentage: 95
