blockchain/webapi/token-proxy.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: token-proxy-svc            #服务名字
  namespace: token-api         #命名空间
spec:
  selector:
    app: token-proxy           #        
  type: ClusterIP
  ports:
  - protocol: TCP   
    port: 9090  
    targetPort: 9090
    name: newthrift
