blockchain/webapi/trade.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: trade-svc            #服务名字
  namespace: token-api         #命名空间
spec:
  selector:
    app: trade-api           #        
  type: ClusterIP
  ports:
    - protocol: TCP   
      port: 80  
      targetPort: 10001
      name: http
    - protocol: TCP   
      port: 9000  
      targetPort: 9000
      name: thrift
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: cash-api
#   namespace: edapi
# spec:
#   maxReplicas: 10
#   minReplicas: 1
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: cash-api
#   targetCPUUtilizationPercentage: 95
