blockchain/webapi/user.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: user-svc            #服务名字
  namespace: token-api         #命名空间
spec:
  selector:
    app: user-api           #        
  type: NodePort
  ports:
  - protocol: TCP   
    port: 10001  
    targetPort: 10001
    name: userapi
  - protocol: TCP   
    port: 9000  
    targetPort: 9000
    name: thriftsvc
