blockchain/webapi/ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc-router
  namespace: token-api
  labels:
    ingress: router       #标签
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/location-snippets: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "upgrade";
      proxy_http_version 1.1;
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $http_x_forwarded_for;
      proxy_set_header Host $host;
      proxy_cache_bypass $http_upgrade;
spec:
  rules:
  - host: "tokenprod.gttest13.com"
    http:
      paths:
      - path: /metatoken/
        pathType: Prefix
        backend:
          service:
            name: trade-svc
            port:
              number: 10001
      - path: /token/
        pathType: Prefix
        backend:
          service:
            name: trade-svc
            port:
              number: 10001
      - path: /mmerchant/
        pathType: Prefix
        backend:
          service:
            name: trade-svc
            port:
              number: 10001
      - path: /mtoken/
        pathType: Prefix
        backend:
          service:
            name: trade-svc
            port:
              number: 10001
      - path: /blockchain/
        pathType: Prefix
        backend:
          service:
            name: trade-svc
            port:
              number: 10001
      - path: /merchant/
        pathType: Prefix
        backend:
          service:
            name: trade-svc
            port:
              number: 10001
      - path: /order/
        pathType: Prefix
        backend:
          service:
            name: trade-svc
            port:
              number: 10001              
      - path: /user/
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 10001
      - path: /mgruser/
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 10001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: token-ui-svc
            port:
              number: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: ingress-svc
#   namespace: token-api
#   labels:
#     ingress: router       #标签
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 80
#       targetPort: 80
#       protocol: TCP
#   selector:
#     ingress: router       #标签
